# lla_arbibot

./: .gitignore  CMakeLists.txt  Makefile  README.md  api_test  compile_commands.json  shell.nix
src/: api_binance.cpp  api_binance.h  api_bybit.cpp  api_bybit.h  api_crypto.cpp  api_crypto.h  api_exchange.cpp  api_exchange.h  api_kraken.cpp  api_kraken.h  api_kucoin.cpp  api_kucoin.h  api_okx.cpp  api_okx.h  balance.cpp  balance.h  binance_api.cpp  binance_api.h  config.h  event_loop.cpp  event_loop.h  ex_mgr.cpp  ex_mgr.h  exchange_api.cpp  exchange_api.h  kraken_api.cpp  main.cpp  order.cpp  order.h  order_mgr.cpp  order_mgr.h  orderbook.cpp  orderbook.h  orderbook_mgr.cpp  orderbook_mgr.h  s_poplavki.cpp  s_poplavki.h  strategy.cpp  strategy.h  timer.h  (+9 more)
tests/: BalanceTest  CMakeLists.txt  Makefile  api.test.cpp  api_binance.test.cpp  api_exchange.test.cpp  api_kraken.test.cpp  balance.test.cpp  cert.pem  event_loop.test.cpp  key.pem  mock_api.cpp  mock_api.h  mock_websocket_server.cpp  mock_websocket_server.h  orderbook.test.cpp  test_utils.h  timers.test.cpp  timers_perf.test.cpp
